# OpenCV-tracking-objects

./: CMakeLists.txt  Makefile  README.md  task_two.cpp
